textbox and search active at the same time #48171

Closed
opened 2016-04-16 20:53:17 +02:00 by Jacques Lucke · 6 comments
Member

System Information
Windows 10 64 bit
Nvidia Quadro 600

Blender Version
Broken: latest buildbot 9c916b0

Exact steps for others to reproduce the error
Move the mouse over a text field and press spacebar to open the search. The search popup opens but the text field becomes active. This not only happens with the spacebar-search but also others (I found this by using the search popups in Animation Nodes).

bug.PNG

**System Information** Windows 10 64 bit Nvidia Quadro 600 **Blender Version** Broken: latest buildbot 9c916b0 **Exact steps for others to reproduce the error** Move the mouse over a text field and press spacebar to open the search. The search popup opens but the text field becomes active. This not only happens with the spacebar-search but also others (I found this by using the search popups in Animation Nodes). ![bug.PNG](https://archive.blender.org/developer/F304030/bug.PNG)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke

This issue was referenced by 667a5ef48e

This issue was referenced by 667a5ef48e5a0f9f20aecce06131516bb92d0f9b

Added subscriber: @brecht

Added subscriber: @brecht

This got broken in 1165236f6, the button open even should not be passed on to the region below, the functionality from that commit works without it too.

This got broken in 1165236f6, the button open even should not be passed on to the region below, the functionality from that commit works without it too.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48171
No description provided.