Fix T48171: activating spacebar search menu over text button activates it or shows tooltip.